Changelog for MinifyX

1.2.0 (**.11.2013)
==============
- Integrated Munee library from http://mun.ee
- Auto creation of cache dir.

1.1.3 (07.01.2013)
==============
- absolute path in the URL attribute of all compressed files.

1.1.2 (11.09.2012)
==============
- Improved caching of minified files.

1.1.1 (10.09.2012)
==============
- Removed E_WARNING on line 94 of minifyx.class.php

1.1.0 (09.09.2012)
==============
- Changed css minifier to Minify_CSS_Compressor from https://code.google.com/p/minify/
- Added Douglas Crockford's JSMin https://github.com/rgrove/jsmin-php/ 
- Serious refactor of code
- Added properties to snippet
- Removed plugin
- Improved caching of files
- Added parameters jsFilename && cssFilename


1.0.0
==============
- Initial Version