@@ -1,9 +1,17 @@
 <?php
 
-$_lang['minifyx_prop_jsSources'] = 'Comma separated list to your JS files from the site base URL';
-$_lang['minifyx_prop_cssSources'] = 'Comma separated list to your CSS files from the site base URL';
-$_lang['minifyx_prop_minifyCss'] = 'Whether to minify the CSS or not';
-$_lang['minifyx_prop_minifyJs'] = 'Whether to minify the JS or not';
-$_lang['minifyx_prop_cacheFolder'] = 'The folder to the cache files from the site base URL';
+$_lang['minifyx_prop_jsSources'] = 'Comma-separated list of JS files for processing. You can specify a *.js and *.coffee.';
+$_lang['minifyx_prop_cssSources'] = 'Comma-separated list of CSS files for processing. You can specify a *.css, *.less and *.scss.';
+
 $_lang['minifyx_prop_jsFilename'] = 'Base name of destination js file, without extension';
 $_lang['minifyx_prop_cssFilename'] = 'Base name of destination css file, without extension';
+$_lang['minifyx_prop_minifyCss'] = 'Enable CSS minify?';
+$_lang['minifyx_prop_minifyJs'] = 'Enable JS minify?';
+
+$_lang['minifyx_prop_registerJs'] = 'How to register javascript? You can save it in the placeholder, call it in the tag "head" (startup) or place before the closing "body" (default).';
+$_lang['minifyx_prop_registerCss'] = 'How to register CSS? You can save it in the placeholder or call in the tag "head" (default).';
+$_lang['minifyx_prop_jsPlaceholder'] = 'Name of javascript placeholder. Will be used only if &registerJs=`placeholder`';
+$_lang['minifyx_prop_cssPlaceholder'] = 'Name of css placeholder. Will be used only if &registerCss=`placeholder`';
+
+$_lang['minifyx_prop_forceUpdate'] = 'Disable check of files update and generate new scripts and styles each time.';
+$_lang['minifyx_prop_cacheFolder'] = 'The folder to the cache files from the site base URL';
